Update build script to use jpackage in Java 14, move version.txt into jar resource, update platformio search path to match the new official installer on macOS and update path to library on macOS