@@ -59,78 +59,45 @@ jlink {
     mergedModule {
         requires 'java.sql'
     }
+    jpackage {
+        imageName = 'Maker Playground'
+        def os = System.getProperty("os.name").toLowerCase()
+        if (os.contains("win")) {
+            // TODO: add necessary flags for windows
+        } else if (os.contains("mac")) {
+            imageOptions = ["--file-associations", "package/macosx/file-association.properties"]
+            resourceDir = file("package/macosx/assets")
+        }
+    }
 }
 
 mainClassName = "$moduleName/io.makerplayground.ui.Main"
 version = getVersionName()
 
-//task createBundle(type: Exec) {
-//    description 'Build the installable bundle'
-//    dependsOn 'jlink'
-//    commandLine = [
-//            'jpackager',
-//            'create-image',
-//            '--name', project.name,
-//            '--version', version,
-//            '--output', "${buildDir}/native-image",
-//            '--runtime-image', "${buildDir}/image",
-//            '--module', "${moduleName}",
-//            '--jvm-args', '--add-modules javafx.controls',
-//            '--jvm-args', '--add-modules javafx.fxml',
-//            '--jvm-args', "--add-reads org.controlsfx.controls=javafx.base,javafx.graphics,javafx.controls",
-//            '--jvm-args', "--add-exports javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
-//            '--jvm-args', "--add-exports javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
-//            '--jvm-args', "--add-exports javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
-//            '--jvm-args', "--add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
-//            '--jvm-args', "--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
-//            '--jvm-args', "--add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
-//            '--jvm-args', "-m ${mainClassName}",
-//            '--verbose'
-//    ]
-//    doLast {
-//        def os = System.getProperty("os.name").toLowerCase()
-//        if (os.contains("win")) {
-//            copy {
-//                from 'version.txt'
-//                into "${buildDir}/native-image/${project.name}/app"
-//            }
-//            exec {
-//                commandLine 'cmd', '/c', "cd .\\package\\windows && create-installer.bat ${version}"
-//            }
-//        } else if (os.contains("mac")) {
-//            copy {
-//                from 'version.txt'
-//                into "${buildDir}/native-image/${project.name}.app/Contents/Java"
-//            }
-//            copy {
-//                from 'library'
-//                into "${buildDir}/native-image/${project.name}.app/Contents/Java/library"
-//            }
-//            copy {
-//                from 'package/macosx/mp.icns'
-//                into "${buildDir}/native-image/${project.name}.app/Contents/Resources"
-//            }
-//            // replace version number in Info.plist file
-//            def plistFile = file("${buildDir}/native-image/${project.name}.app/Contents/Info.plist")
-//            plistFile.write(plistFile.text.replaceAll('MP_BUILD_VERSION', version.toString()))
-//            // rename app bundle
-//            def macBundleName = 'Maker Playground'
-//            delete "${buildDir}/native-image/${macBundleName}.app"
-//            ant.move(file: "${buildDir}/native-image/${project.name}.app" , tofile: "${buildDir}/native-image/${macBundleName}.app")
-//            // copy the app bundle to the package directory
-//            copy {
-//                from "${buildDir}/native-image/${macBundleName}.app"
-//                into "package/macosx/${macBundleName}.app"
-//            }
-//            // create pkg installer
-//            exec {
-//                commandLine '/bin/sh', '-c', "cd package/macosx && ./createappbundle.sh ${version}"
-//            }
-//        } else {
-//            throw new GradleException("Found unsupported operating system: ${os}")
-//        }
-//    }
-//}
+task createBundle {
+    description 'Build the installable bundle'
+    dependsOn 'jpackageImage'
+    doLast {
+        def os = System.getProperty("os.name").toLowerCase()
+        if (os.contains("win")) {
+            exec {
+                commandLine 'cmd', '/c', "cd .\\package\\windows && create-installer.bat ${version}"
+            }
+        } else if (os.contains("mac")) {
+            // copy the app bundle to the package directory
+            copy {
+                from "${buildDir}/jpackage/Maker Playground.app"
+                into "package/macosx/Maker Playground.app"
+            }
+            // create pkg installer
+            exec {
+                commandLine '/bin/sh', '-c', "cd package/macosx && ./createappbundle.sh ${version}"
+            }
+        } else {
+            throw new GradleException("Found unsupported operating system: ${os}")
+        }
+    }
+}
 
 task versionName {
     getVersionName()
@@ -146,7 +113,7 @@ def getVersionName() {
     def versionName = stdout.toString().trim()
 
     // write version.txt file
-    def file = new File('version.txt')
+    def file = new File('src/main/resources/version.txt')
     file.write "version=${versionName}\nrelease-date=${new Date().format('yyyy-MM-dd')}"
 
     return versionName
